--- a/index.html/index.html
+++ b/index.html/index.html
@@ -7,6 +7,10 @@
     <meta name="keywords" content="Advanced Java, Java Notes, Java Interview Questions, Java Collections, Java Multithreading, JDBC, Exception Handling, Java Design Patterns">
     <meta name="author" content="Sanket Bhosale">
     <meta name="robots" content="index, follow">
+    
+<meta name="description" content="Comprehensive notes and code examples on advanced Java programming concepts.">
+<meta name="keywords" content="Java, advanced Java, programming notes, code examples, Java tutorials">
+
     <title>Advanced Java Notes | Master Java Programming</title>
     <link rel="stylesheet" href="style.css">
 </head>
