Push Code Add In Html File + Html Code

--- a/index.html/index.html
+++ b/index.html/index.html
@@ -53,3 +53,49 @@
     </footer>
 </body>
 </html>
+<!-- 
+🚀 उपाय 1: नवीन GitHub अकाउंटसाठी क्रेडेंशियल्स अपडेट करा (सोप्पा आणि योग्य मार्ग)
+1. जुन्या क्रेडेंशियल्स (Password) कॅश क्लिअर करा:
+टर्मिनलमध्ये खालील कमांड टाका:
+
+bash
+Copy
+Edit
+git credential-cache exit
+git credential-manager clear
+2. नवीन GitHub अकाउंटसाठी युजरनेम आणि ईमेल सेट करा:
+bash
+Copy
+Edit
+git config --global user.name "तुमचं नवीन GitHub युजरनेम"
+git config --global user.email "तुमचा नवीन ईमेल"
+उदाहरण:
+
+bash
+Copy
+Edit
+git config --global user.name "SanketB2004"
+git config --global user.email "sanketnewemail@gmail.com"
+3. नवीन रिमोट (Remote) सेट करा:
+तुमच्या नवीन GitHub अकाउंटशी लिंक केलेला रिमोट अपडेट करा:
+
+bash
+Copy
+Edit
+git remote set-url origin https://github.com/नवीनयुजरनेम/रिपोनाव.git
+उदाहरण:
+
+bash
+Copy
+Edit
+git remote set-url origin https://github.com/SanketB2004/Basic-Java-Code.git
+4. कोड पुश करा आणि लॉगिन करा:
+आता पुन्हा कोड पुश करण्याचा प्रयत्न करा:
+
+bash
+Copy
+Edit
+git push origin main
+👉 लॉगिन विचारल्यावर:
+
+Username: तुमचं नवीन GitHub युजरनेम टाका. -->
